--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -198,7 +198,7 @@ body,td,th {
      <a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block2">
-     <h3>自驾服务器安全实用</h3>
+     <h3>自架服务器安全实用</h3>
      <li>Java服务器，跨平台，IT Geek轻松构架</li>
      <li>大量文档帮助，构建最安全的个人服务器</li>
      <a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">更多>></a>
@@ -231,7 +231,7 @@ body,td,th {
         </div>
       </div>
       <div class="user" >
-       <h2>他们也在用语盒……</h2>
+       <h3>他们也在用语盒……</h3>
        <li><b>bartonchen***@gmail.com:</b> 我和我老婆是黑莓手机用户，最近自己用自己的个人电脑做了服务器运行你的yuchberrymail，软件很好，发送和接收都比较快，也比较省电和流量，现在我跟我老婆每天都拿邮件当短信用了！……</li>
        <li><b><a href="http://weibo.com/xiexiaohun" target="_blank">@王小协</a></b>：Yuchberry看微博神马的超带感 ~ BBer都试试吧 ~再感谢 @yuchberry 大神出的如此好软。前两天我服务器坏了，没能用。那个纠结啊!无助啊!!!</li>
        <li><b><a href="http://weibo.com/vf79" target="_blank">@唔岳</a></b>：@yuchberry YB一整天都登不上去，习惯push了一下没了真难过！</li>
@@ -247,7 +247,7 @@ body,td,th {
        <a href="http://t.qq.com/search/index.php?k=yuchberry&pos=101" target="_blank" style="margin:0 0 0 10px" >腾讯微博更多评价>></a>
       </div>
       <div class="outlink" >
-       <h2>曾经帮助过语盒的朋友们</h2>
+       <h3>曾经帮助过语盒的朋友们</h3>
        <a href="http://www.52digital.com/" target="_blank">我爱数码网</a> |
        <a href="http://www.52blackberry.com/" target="_blank">52blackberry</a> |
        <a href="http://bbs.bbercn.com/" target="_blank">中国莓论坛</a> <br />       
