--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -12,7 +12,7 @@ body,td,th {
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="Yuchsign.css">
-    <title>语盒(YuchBerry) 我们专注黑莓推送</title>
+    <title>语盒(YuchBerry) 我们关注黑莓推送</title>
     <script type="text/javascript" language="javascript" src="yuchsign/yuchsign.nocache.js"></script>
   </head>                                         
   <body>
