--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -67,7 +67,7 @@ body,td,th {
             <ul>那如何填写主机和端口呢 <span style="font-size:300%">？</span></ul>
           </div>
           <div class="right" >
-             <img src="http://farm7.static.flickr.com/6134/6007395958_fda10d6d70.jpg" width="470" height="380" alt="未标题-2" />
+             <img src="http://photo2.bababian.com/upload5/20110813/3FA43E82EAD8D47849D0FF2E9CCC9487.jpg" width="470" height="380" alt="未标题-2" />
           </div>
       </div>
       <div class="page" id="page2" style="display:none;">
@@ -80,7 +80,7 @@ body,td,th {
             <ul>接下来看看如何配置账户吧……</ul>
           </div>
           <div class="right" >
-            <img src="http://farm7.static.flickr.com/6027/6007396082_de377ef9b5.jpg" width="470" height="380" alt="未标题-3" />
+            <img src="http://photo2.bababian.com/upload5/20110813/B730E0264C7E71D9AA5F0FA8A440DD1D.jpg" width="470" height="380" alt="未标题-3" />
           </div>
       </div>
       <div class="page" id="page3" style="display:none;" >
@@ -93,7 +93,7 @@ body,td,th {
             <ul>添加之后，当然还没有结束啦……</ul>
           </div>
           <div class="right" >
-             <img src="http://farm7.static.flickr.com/6134/6007395800_81142a4716.jpg" width="500" height="380" alt="未标题-4" />
+             <img src="http://photo2.bababian.com/upload5/20110813/AD02C21E6AB7D3C17C132F01C7F62F61.jpg" width="500" height="380" alt="未标题-4" />
           </div>
       </div>
       <div class="page" id="page5" style="display:none;">
@@ -105,7 +105,7 @@ body,td,th {
             <ul>然后……</ul>
           </div>
           <div class="right">
-             <img src="http://farm7.static.flickr.com/6121/6007498640_b36c8abeb6.jpg" width="500" height="380" alt="未标题-5" />
+             <img src="http://photo2.bababian.com/upload5/20110813/A52FF415F2556D73BB682CB5C7A9BBF0.jpg" width="500" height="380" alt="未标题-5" />
           </div>
       </div>
       <div class="page" id="page6" style="display:none;" >
@@ -114,7 +114,7 @@ body,td,th {
             <ul>不多说了，<b style="font-size:200%">连接！</b></ul>
           </div>
           <div class="right">
-             <img src="http://farm7.static.flickr.com/6144/6007036467_f0588df95d.jpg" width="500" height="380" alt="未标题-6" />
+             <img src="http://photo2.bababian.com/upload5/20110813/DE7BC2B45A8D1A8479E5F1E693D003B0.jpg" width="500" height="380" alt="未标题-6" />
           </div>
       </div>
       <div class="page" id="page7" style="display:none;" >
@@ -123,10 +123,10 @@ body,td,th {
             <ul>实践证明，一个好的软件，是需要有一个完善的错误排查机制的，语盒也不例外。</ul>
             <ul>无论是客户端，还是服务器，都会让用户自己查找出手机为何连接不上的<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">原因</a>，尽快的排查出错误，<b>而不是束手无策</b>。</ul>
             <ul>如果你实在搞不定，就发邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>联系我们吧。我们会在第一时间回复你的问题的。</ul>
-			<img src="http://farm7.static.flickr.com/6024/6007621124_c8fd415fbb.jpg" width="415" height="129" alt="未标题-8" />
+			<img src="http://photo2.bababian.com/upload5/20110813/0944A01CFD9C831963A5091D96BA9EAE.jpg" width="415" height="129" alt="未标题-8" />
           </div>
           <div class="right">
-          	<img src="http://farm7.static.flickr.com/6130/6007065569_1da4cc9e10.jpg" width="500" height="380" alt="未标题-7" />
+          	<img src="http://photo2.bababian.com/upload5/20110813/E86A1D5B7B4215B4A653B59A8DA6172C.jpg" width="500" height="380" alt="未标题-7" />
           </div>
       </div>
       <div class="page" id="page8" style="display:none;" >
@@ -138,19 +138,19 @@ body,td,th {
             <ul>使用电脑浏览器登录自己的邮箱，给自己发送一封邮件，看看多久能够收到吧？</ul>
           </div>
           <div class="right" >
-          	<img src="http://farm7.static.flickr.com/6012/6007133997_04e3577786.jpg" width="500" height="380" alt="未标题-9" />
+          	<img src="http://photo2.bababian.com/upload5/20110813/F7AB9992856E50CAAD5F38AFE77B7D0C.jpg" width="500" height="380" alt="未标题-9" />
           </div>
       </div>
       <div class="page" id="page9" style="display:none;" >
           <div class="left">
             <h2>收发微博</h2>
             <ul>如果推送的是微博账户，连接成功后，需要在高级设置里面<b>开启Weibo模块</b>，系统才会加载微博模块所需要数据进行显示。</ul>
-            <img src="http://farm7.static.flickr.com/6017/6007849646_bbc4531f11.jpg" width="415" height="129" alt="未标题-11" />
+            <img src="http://photo2.bababian.com/upload5/20110813/C226C9336175302BAF320B9F6076295A.jpg" width="415" height="129" alt="未标题-11" />
             <ul>语盒团队自己开发了一个微博接受、查看、发送的界面模块，并不是像邮件一样使用黑莓的消息程序。当然，这个模块还仍然在测试过程中，功能尚未完善。</ul>
             <ul>微博模块的完整详细的使用文档在<a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo#配置客户端" target="_blank">这个地方</a>。</ul>
           </div>
           <div class="right">
-			<img src="http://farm7.static.flickr.com/6137/6007747378_e6f0baa888.jpg" width="500" height="380" alt="未标题-10" />
+			<img src="http://photo2.bababian.com/upload5/20110813/00E675D6BE78D8A46AA907AD4B97A116.jpg" width="500" height="380" alt="未标题-10" />
           </div>
       </div>
       <div class="page" id="page10" style="display:none;" >
@@ -162,7 +162,7 @@ body,td,th {
             <ul>作为一个<b>开源、开放项目</b>，语盒希望你能更多的了解它，使用它，传播它，他不会把自己的已经所拥有的东西藏着掖着，反而就怕你不去发现它。</ul>
           </div>
           <div class="right" >
-			<img src="http://farm7.static.flickr.com/6147/6008394267_a1eff7c578.jpg" width="500" height="380" alt="未标题-12" />
+			<img src="http://photo2.bababian.com/upload5/20110813/330361ED014B03744A3A8B0B87F23952.jpg" width="500" height="380" alt="未标题-12" />
           </div>
       </div>
       <div class="page" id="page11" style="display:none;">
