--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -243,16 +243,17 @@ body,td,th {
        <li><b><a href="http://t.qq.com/y-wuli" target="_blank">@杨武力</a></b>：感谢Yuchberry原创及康子在其基础上搭建的服务器，成功实现黑莓最强悍的功能，此后在金凤山上也可以瞬时收到邮件了。砖头手机复活。</li>
        <li><b><a href="http://t.qq.com/vnline" target="_blank">@vnline</a></b>：yuchberry确实贼快了，这边一点，那边不超10S就收到了。当短信用很不错的的o(*≧▽≦)ツ</li>
        <li><b><a href="http://t.qq.com/xuanxzi" target="_blank">@王睿</a></b>：yuchberry 霸气外露...</li>
-       <li><b><a href="http://t.qq.com/freebao3" target="_blank">@CCTV</a></b>：某黑莓博客，居然在推广网秦杀毒，我就说嘛，yuchberry 开源的很多人没去推广，一个在黑莓上无用的商业软件还能出一个评测。你说奸商的用意在哪？</li>
+       <li><b><a href="http://t.qq.com/freebao3" target="_blank">@CCTV</a></b>：某黑莓博客，居然在推广网秦杀毒，我就说嘛，yuchberry 开源的很多人没去推广，一个在黑莓上无用的商业软件还能出一个评测。你说奸商的用意在哪？</li><br />
        <span style=" margin:10px 20px; font-size:200%">......</span>   
        <a href="http://weibo.com/k/yuchberry?Refer=Index_header" target="_blank">新浪微博更多评价>></a>
        <a href="http://t.qq.com/search/index.php?k=yuchberry&pos=101" target="_blank" style="margin:0 0 0 10px" >腾讯微博更多评价>></a>
       </div>
       <div class="outlink" >
        <h3>曾经帮助过语盒的朋友们</h3>
-       <a href="http://www.52digital.com/" target="_blank">我爱数码网</a> |
-       <a href="http://www.52blackberry.com/" target="_blank">52blackberry</a> |
-       <a href="http://bbs.bbercn.com/" target="_blank">中国莓论坛</a> <br />       
+       <a href="http://www.blackberryfans.com/" target="_blank">黑莓粉丝网</a> |
+       <a href="http://www.52digital.com/" target="_blank">我爱数码网</a> |       
+       <a href="http://www.52blackberry.com/" target="_blank">52blackberry</a>  <br />  
+       <a href="http://bbs.bbercn.com/" target="_blank">中国莓论坛</a> |
        <a href="http://www.bjxiaoc.cn/" target="_blank">北京小C</a> |
        <a href="http://bber.info/" target="_blank">BBer 莓博</a>
       </div>
