--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -209,7 +209,7 @@ body,td,th {
      <h3>迅速快捷推送（Push）机制</h3>
      <li>最短能在10秒钟内将新邮件推送到手机</li>
      <li>及时回复、评论好友的动态信息，全新的微博体验</li>
-     <li>省去轮训方式的60%以上的多余电量消耗，为手机“保驾护航”。</li>
+     <li>省去轮询方式的60%以上的多余电量消耗，为手机“保驾护航”。</li>
      <a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block4">
