--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -229,7 +229,8 @@ body,td,th {
 		<div class="qq">
           互助QQ群：<br />
           <span style=" margin:auto 10px">148913654（满）</span><br />
-          <span style=" margin:auto 10px">162679435</span><br />          
+          <span style=" margin:auto 10px">162679435（满）</span><br />
+			<span style=" margin:auto 10px">174763979</span><br /> 
         </div>
       </div>
       <div class="user" >
