--- a/server/mapInfo.html
+++ b/server/mapInfo.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Yuchberry location information via Google Maps</title>
+    <title>Yuchs'Box(www.yuchs.com) location information via Google Maps</title>
   </head>
   <body>
 	<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://ditu.google.cn/maps?q=$map_x$,$map_y$&amp;num=1&amp;sll=$map_x$,$map_y$&amp;sspn=0.010917,0.022724&amp;brcurrent=3,0x35f05410fbf08a97:0xea21de81a06d377b,0,0x35f05137c865ad63:0xd348af83c67dc389%3B5,0,0&amp;ie=UTF8&amp;ll=$map_x$,$map_y$&amp;spn=0.010912,0.022724&amp;z=14&amp;output=embed"></iframe><br />
 	<small><a href="http://ditu.google.cn/maps?q=$map_x$,$map_y$&amp;num=1&amp;sll=$map_x$,$map_y$&amp;sspn=0.624564,0.790957&amp;brcurrent=3,0x35f055a160ba85ff:0x36bd143f9b2e9d93,0,0x35f05137c865ad63:0xd348af83c67dc389%3B5,0,0&amp;ie=UTF8&amp;ll=$map_x$,$map_y$&amp;spn=0.021823,0.045447&amp;z=14&amp;source=embed" style="color:#0000FF;text-align:left">$mail_sign$</a></small>	
-	<small><a href="http://code.google.com/p/yuchberry">Yuchberry PushMessage</a></small><br />
+	<small><a href="http://www.yuchs.com">Yuchs'Box PushMessage</a></small><br />
 	<pre>$mail_content$</pre>
   </body>
 </html>
